[gd_scene load_steps=9 format=3 uid="uid://cloegw428m4os"]

[ext_resource type="PackedScene" uid="uid://bvtqmo4gussln" path="res://scenes/base/content_page.tscn" id="1_content"]
[ext_resource type="Texture2D" uid="uid://b356vdye1lbad" path="res://assets/images/pages/page5.png" id="2_bg"]
[ext_resource type="Texture2D" uid="uid://dr1mny2mvexng" path="res://assets/images/animations/page5/tree1/tree1.png" id="3_tree1"]
[ext_resource type="Texture2D" uid="uid://canvrw4qcecui" path="res://assets/images/animations/page5/tree2/tree1.png" id="4_tree2"]
[ext_resource type="Texture2D" uid="uid://bkb2c60l7eo3q" path="res://assets/images/instructions/agitar-tablet-instruction.png" id="5_instruction"]
[ext_resource type="Script" uid="uid://c22ji8p3hnfdb" path="res://scripts/pages/page5.gd" id="6_script"]
[ext_resource type="Texture2D" uid="uid://cjr1bme2vhgrb" path="res://assets/images/text-balloon/page5-pos-interaction.png" id="7_balloon"]
[ext_resource type="AudioStream" uid="uid://l8vfj4w2ejkp" path="res://assets/audio/transcriptions/pos-interaction/page5-pos-interaction.ogg" id="8_audio"]

[node name="Page5" instance=ExtResource("1_content")]
script = ExtResource("6_script")

[node name="background" parent="." index="0"]
texture = ExtResource("2_bg")

[node name="MainContainer" type="Control" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TreesContainer" type="Control" parent="MainContainer" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tree1" type="TextureRect" parent="MainContainer/TreesContainer" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247
anchor_top = 0.593
anchor_right = 0.527
anchor_bottom = 1.0
offset_left = -16.696
offset_top = -10.2321
offset_right = 0.263977
offset_bottom = -209.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tree1")
expand_mode = 1
stretch_mode = 5

[node name="Tree2" type="TextureRect" parent="MainContainer/TreesContainer" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.471
anchor_top = 0.653
anchor_right = 0.692
anchor_bottom = 0.915
offset_left = -12.728
offset_top = -235.672
offset_right = 60.5439
offset_bottom = -1.96002
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tree2")
expand_mode = 1
stretch_mode = 5

[node name="Instruction" type="TextureRect" parent="MainContainer" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.072
anchor_top = 0.445
anchor_right = 0.362
anchor_bottom = 0.6
offset_left = -1.29601
offset_top = 5.31998
offset_right = -5.01602
offset_bottom = -48.4
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_instruction")
expand_mode = 1
stretch_mode = 5

[node name="TextBalloon" type="TextureRect" parent="MainContainer" index="2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052
anchor_top = 0.454
anchor_right = 0.428
anchor_bottom = 0.796
offset_left = 0.0639992
offset_top = -31.896
offset_right = 0.295959
offset_bottom = -90.1041
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_balloon")
expand_mode = 1
stretch_mode = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource("8_audio")

[node name="botao-proximo" parent="." index="3"]
offset_left = -208.0
offset_top = -87.9999
offset_right = 63.0001
offset_bottom = 14.0

[node name="botao-anterior" parent="." index="5"]
offset_left = 32.0
offset_top = -88.0
offset_right = 296.0
offset_bottom = 2.0
